Enable testing using jdk 8, 11, and 17