@@ -70,15 +70,21 @@ tasks.jar {
     dependsOn(genConfigProperties)
 }
 
-//test {
-//    if(JavaVersion.current() >= JavaVersion.VERSION_11) {
-//        // powermock warnings for Java >= 11
-//        jvmArgs += ["--add-opens", "java.base/java.lang=ALL-UNNAMED",
-//                    "--add-opens", "java.base/java.util.regex=ALL-UNNAMED",
-//                    "--add-opens", "java.base/java.text=ALL-UNNAMED",
-//                    "--add-opens", "java.base/java.io=ALL-UNNAMED",
-//                    "--add-opens", "java.base/sun.nio.fs=ALL-UNNAMED",
-//                    "--add-opens", "java.base/java.util=ALL-UNNAMED",
-//        ]
-//    }
-//}
+// convenience task name for github tests
+tasks.register<Test>("test8") {
+    dependsOn(tasks.test)
+}
+
+tasks.register<Test>("test11") {
+    javaLauncher.set(javaToolchains.launcherFor {
+        languageVersion.set(JavaLanguageVersion.of(11))
+        vendor.set(JvmVendorSpec.ADOPTIUM)
+    })
+}
+
+tasks.register<Test>("test17") {
+    javaLauncher.set(javaToolchains.launcherFor {
+        languageVersion.set(JavaLanguageVersion.of(17))
+        vendor.set(JvmVendorSpec.ADOPTIUM)
+    })
+}
